<resources>
    <string name="app_name">TwoActivites</string>
    <string name="second_activity">activity2_name</string>
    <string name="text_header">Message Received</string>
    <string name="button_main">Send</string>
    <string name="editText_main">Enter Your Message Here</string>
    <string name="button_second">Reply</string>
    <string name="editText_second">Enter Your Reply Here</string>
    <string name="text_header_reply">Reply Received</string>
    <string name="home">home</string>


</resources>